<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/weatherFragment">

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.dresscode.ui.weather.WeatherFragment"
        android:label="@string/tab_weather"
        tools:layout="@layout/fragment_weather">
        <action
            android:id="@+id/action_weather_to_city_select"
            app:destination="@id/citySelectFragment" />
    </fragment>

    <fragment
        android:id="@+id/outfitFeedFragment"
        android:name="com.example.dresscode.ui.feed.OutfitFeedFragment"
        android:label="@string/tab_outfits"
        tools:layout="@layout/fragment_outfit_feed" />

    <fragment
        android:id="@+id/tryOnFragment"
        android:name="com.example.dresscode.ui.tryon.TryOnFragment"
        android:label="@string/tab_try_on"
        tools:layout="@layout/fragment_try_on" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.dresscode.ui.profile.ProfileFragment"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_profileFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.dresscode.ui.auth.LoginFragment"
        android:label="@string/btn_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/citySelectFragment"
        android:name="com.example.dresscode.ui.weather.CitySelectFragment"
        android:label="@string/city_select_title"
        tools:layout="@layout/fragment_city_select" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.dresscode.ui.feed.FavoritesFragment"
        android:label="@string/profile_favorites"
        tools:layout="@layout/fragment_favorites" />

</navigation>
